# ie-cf-reduction

./: README.md  pyproject.toml
src/: canonical_form_reduction.py
