[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iecfreduce"
version = "0.0.1"
authors = [
    { name = "Dan Brennan", email = "d.s.brennan@sheffield.ac.uk" }
]
description = "Irreducible Element model Canonical Form reduction rules"
readme = "README.md"
requires-python = ">=3.7.16"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[tool.setuptools.packages.find]
include = ["src"]